kubernetes/mongoexpnode.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: mongoexpress
  labels:
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongoexp
  template:
    metadata:
      labels:
        app: mongoexp
    spec:
      containers:
      - name: mongoexp
        imagePullPolicy: Always
        image: mongo-express
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongoexpsvc
spec:
  type: LoadBalancer
  selector:
    app: mongoexp
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
    nodePort: 31900
