kubernetes/nodeingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-ingress
  labels:
    name: node-ingress
spec:
  rules:
  - host: nodeapp.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mongo-db
            port: 
              number: 3000
